--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <script defer src="/__/firebase/10.3.0/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/10.3.0/firebase-firestore-compat.js"></script>
     <script defer src="/__/firebase/10.3.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/10.3.0/firebase-messaging-compat.js"></script>
+    <!-- <script defer src="/__/firebase/10.3.0/firebase-messaging-compat.js"></script> -->
     <script defer src="/__/firebase/10.3.0/firebase-storage-compat.js"></script>
     <script defer src="/__/firebase/10.3.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/10.3.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/10.3.0/firebase-performance-compat.js"></script>
+    <!-- <script defer src="/__/firebase/10.3.0/firebase-remote-config-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/10.3.0/firebase-performance-compat.js"></script> -->
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -40,10 +40,7 @@
   </head>
   <body>
     <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+      <h2>howdy partner you seem to have loaded up the wrong page.</h2>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
